// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RhelApiTypes Should have specific API properties: all exported api types 1`] = `
Object {
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA": "tally_snapshots",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_CORES": "cores",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_DATE": "date",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_INSTANCES": "instances",
  "default": Object {
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA": "tally_snapshots",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_CORES": "cores",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_DATE": "date",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_INSTANCES": "instances",
  },
  "rhelApiTypes": Object {
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
    "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA": "tally_snapshots",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_CORES": "cores",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_DATE": "date",
    "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_INSTANCES": "instances",
  },
}
`;

exports[`RhelApiTypes Should have specific API properties: specific types 1`] = `
Object {
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA": "data",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_DATE": "date",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_INSTANCES": "instances",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_MEMORY": "memory",
  "CLOUDIGRADE_API_RESPONSE_CONCURRENT_DATA_VCPU": "vcpu",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA": "tally_snapshots",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_CORES": "cores",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_DATE": "date",
  "RHSM_API_RESPONSE_ACCOUNTS_PRODUCTS_DATA_INSTANCES": "instances",
}
`;
